--- a/lab-01-hello-r.Rmd
+++ b/lab-01-hello-r.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Lab 01 - Hello R"
-author: "Insert your name here"
-date: "Insert date here"
+author: "Cynthia Jiao"
+date: "01/19/2025"
 output: 
   html_document: 
     fig_height: 4
@@ -19,13 +19,19 @@ library(datasauRus)
 
 ### Exercise 1
 
-Remove this text, and add your answer for Exercise 1 here.
+This data frame has 1846 rows and 3 columns (variables).
+
+```{r}
+?datasaurus_dozen
+
+datasaurus_dozen %>%
+  count(dataset) %>%
+  print(13)
+```
 
 ### Exercise 2
 
-The answers for this exercise are already provided to help guide you. Clean up the narrative to reflect what you want to submit. Let’s break it into steps:
-
-First, let's plot the data in the dino dataset:
+Plot the data in the dino dataset:
 
 ```{r plot-dino, fig.height=3, fig.width=6}
 dino_data <- datasaurus_dozen %>%
@@ -35,51 +41,74 @@ ggplot(data = dino_data, mapping = aes(x = x, y = y)) +
   geom_point()
 ```
 
-Next, let's calculate the correlation between `x` and `y` in this dataset:
+Calculate the correlation between `x` and `y` in this dataset:
 
 ```{r cor-dino}
 dino_data %>%
   summarize(r = cor(x, y))
 ```
-Once you’ve cleaned up the text, add your own explanation or observations here!
+Just looking at the correlation coefficient, there seems to be a very weak negative correlation (-0.06). However, the plot does NOT show a linear relationship between x and y. For example, within the range of x = 20 to 40, when x increases, y increases. But within the range of x = 70 to 100, when x increases, y decreases. A correlation coefficient does not necessarily mean that there is a linear relationship. Always plot the data first before running a linear correlation.
 
 
 ### Exercise 3
 
-This is your turn to write the code and narrative for the star dataset. Follow the same steps as above to complete the analysis. Don't forget to label your chunks appropriately!
+Plot the star dataset:
 
-Note that the R chunks are labeled with `plot-star` and `cor-star` to provide spaces to place the code for plotting and calculating the correlation coefficient.
-To finish, clean up the narrative by removing these instructions.
+```{r plot-star, fig.height=6, fig.width=6}
+star_data <- datasaurus_dozen %>%
+  filter(dataset == "star")
 
-```{r plot-star}
+ggplot(data = star_data, mapping = aes(x = x, y = y)) +
+  geom_point()
 
 ```
 
-I'm some filler text, you should replace me with more meaningful text...
+Calculate the x and y correlation:
 
 ```{r cor-star}
-
+star_data %>%
+  summarize(r = cor(x, y))
 ```
-Add your explanation here—what did you notice?
+The correlatin coefficient is -0.063, which is slightly weaker than the coefficient of dino dataset. The star plot does NOT show a linear relationship between x and y. For example, when x ranges from 50 to 60, there is a positive relationship between x and y, but when x ranges from 60 to 70, the relationship turns negative. 
 
 
 ### Exercise 4
 
-Add your code and narrative to complete this exercise. Use the conventions from the previous exercises to name your chunks and organize your work.
+Plot the circle dataset:
 
-```{r}
+```{r plot-circle, fig.height=6, fig.width=6}
+circle_data <- datasaurus_dozen %>%
+  filter(dataset == "circle")
+
+ggplot(data = circle_data, mapping = aes(x = x, y = y)) +
+  geom_point()
 
 ```
 
-```{r}
+Calculate the x and y correlation:
+
+```{r cor-circle}
+circle_data %>%
+  summarize(r = cor(x, y))
 
 ```
+The correlatin coefficient is -0.068, which is slightly stronger than the coefficient of dino dataset. The circle plot does NOT show a linear relationship between x and y. For example, when x ranges from 20 to 50, as x increases, y can have multiple values and both increase or decrease, which does not represent a consistent linear relationship.
+
 
 ### Exercise 5
 
-This is your final exercise! Add code and narrative as needed. Be creative and show off what you’ve learned so far.
-Add code and narrative as needed.
+Combining all graphs together:
 
-To add additional R chunks, you can either type the backticks, curly braces, and the letter `r`, or use the "Insert Chunk" button above (the green C+ icon). Have fun!
+```{r plot-all, fig.height=8, fig.width=6}
+ggplot(datasaurus_dozen, aes(x = x, y = y, color = dataset)) +
+  geom_point() +
+  facet_wrap(~dataset, ncol = 3) +
+  theme(legend.position = "none")
+
+datasaurus_dozen %>%
+  group_by(dataset) %>%
+  summarize(r = cor(x, y)) %>%
+  print(13)
+```
 
 
